完成集成模块